fix names of some files

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "Calendar"
-include ':app'
+include ':sample'
 include ':custom_calendar'
